--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "vis-network": "^9.1.0",
+    "vis-react": "^0.5.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
